--- a/src/app/pessoa/listar-pessoa/listar-pessoa.component.html
+++ b/src/app/pessoa/listar-pessoa/listar-pessoa.component.html
@@ -7,7 +7,7 @@
   </section>  
 
   <section>
-    <div class="row " style="margin-bottom:20px">
+    <div class="row">
       <div class="col-md-4">
         <label for="input-nome">Nome</label>
         <input type="text" id="input-nome" class="form-control"/>
