--- a/src/app/pessoa/listar-pessoa/listar-pessoa.component.html
+++ b/src/app/pessoa/listar-pessoa/listar-pessoa.component.html
@@ -49,7 +49,7 @@
                 <td>{{ pessoa.telefones.length }}</td>
                 <td>
                   <button type="button" class="btn btn-info">Editar</button>
-                  <button type="button" class="btn btn-danger">Excluir</button>
+                  <button type="button" class="btn btn-danger" (click)="deletarPessoa(pessoa.id)" >Excluir</button>
                 </td>
                 
               </tr>
