--- a/src/app/pessoa/cadastrar-pessoa/cadastrar-pessoa.component.html
+++ b/src/app/pessoa/cadastrar-pessoa/cadastrar-pessoa.component.html
@@ -17,10 +17,12 @@
         </div>
         <div class="col-md-5">
           <label for="input-cpf">CPF</label>
-          <input type="text" formControlName="cpf" id="input-cpf" class="form-control" />
+          <input type="text" formControlName="cpf" id="input-cpf" class="form-control" [textMask]="{mask: maskCPF}"/>
           <small  *ngIf="!formPessoa.get('cpf').valid && formPessoa.get('cpf').touched" class="form-text text-danger">Campo Inválido</small>
         </div>
       </div>
+
+      
 
       <div class="row" >
         <div class="col-md-5">
@@ -32,7 +34,7 @@
         <div class="col-md-5">
           
           <label for="input-data-nasc">Data de Nascimento</label>
-          <my-date-picker name="mydate" [options]="myDatePickerOptions" formControlName="dataNascimento"></my-date-picker>
+          <my-date-picker name="mydate" [options]="myDatePickerOptions" formControlName="dataNascimento" ></my-date-picker>
           <small  *ngIf="!formPessoa.get('dataNascimento').valid && formPessoa.get('dataNascimento').touched" class="form-text text-danger">Campo Inválido</small>
 
 
